content/v8.x/el-GR/doc/api/deprecations.md
# Αποσυρόμενα API

<!--introduced_in=v7.7.0-->

Η Node.js μπορεί να αποσύρει API όταν: (α) η χρήση του API θεωρείται ανασφαλής, (β) ένα βελτιωμένο εναλλακτικό API είναι διαθέσιμο, ή (γ) αναμένονται αλλαγές στο API που χαλάνε τη συμβατότητα σε μια μελλοντική κυκλοφορία.

Η Node.js χρησιμοποιεί τρία είδη απόσυρσης:

* Μόνο στην τεκμηρίωση
* Κατά την εκτέλεση
* Τέλος κύκλου ζωής

Μια απόσυρση μόνο στην τεκμηρίωση, είναι αυτή που εκφράζεται μόνο μέσω της τεκμηρίωσης του API της Node.js. Αυτές δεν έχουν καμία επίδραση στην εκτέλεση της Node.js.

Μια απόσυρση κατά την εκτέλεση, από προεπιλογή, θα δημιουργήσει μια προειδοποίηση η οποία εμφανίζεται στο `stderr` την πρώτη φορά που θα χρησιμοποιηθεί το API προς απόσυρση. Αν χρησιμοποιηθεί η παράμετρος γραμμής εντολών `--throw-deprecation`, η απόσυρση κατά την εκτέλεση θα εμφανίσει ένα σφάλμα.

Μια απόσυρση τέλους κύκλου ζωής, χρησιμοποιείται για τον προσδιορισμό κώδικα που είτε έχει αφαιρεθεί ή θα αφαιρεθεί σύντομα από την Node.js.

## Un-deprecation

From time-to-time the deprecation of an API may be reversed. Such action may happen in either a semver-minor or semver-major release. Σε αυτές τις περιπτώσεις, αυτό το έγγραφο θα ενημερωθεί με πληροφορίες σχετικές με την απόφαση. *However, the deprecation identifier will not be modified*.

## Λίστα API που έχουν αποσυρθεί

<a id="DEP0001"></a>

### DEP0001: http.OutgoingMessage.prototype.flush

Τύπος: Κατά την εκτέλεση

Η μέθοδος `OutgoingMessage.prototype.flush()` αποσύρθηκε. Χρησιμοποιήστε το `OutgoingMessage.prototype.flushHeaders()`.

<a id="DEP0002"></a>

### DEP0002: require('\_linklist')

Τύπος: Τέλος κύκλου ζωής

Η ενότητα `_linklist` αποσύρθηκε. Χρησιμοποιήστε μια εναλλακτική ενότητα που τρέχει σε επίπεδο χρήστη.

<a id="DEP0003"></a>

### DEP0003: \_writableState.buffer

Τύπος: Κατά την εκτέλεση

Η ιδιότητα `_writableState.buffer` αποσύρθηκε. Χρησιμοποιήστε τη μέθοδο `_writableState.getBuffer()`.

<a id="DEP0004"></a>

### DEP0004: CryptoStream.prototype.readyState

Τύπος: Μόνο στην τεκμηρίωση

Η ιδιότητα `CryptoStream.prototype.readyState` είναι υπό απόσυρση και δεν πρέπει να χρησιμοποιείται.

<a id="DEP0005"></a>

### DEP0005: Buffer() constructor

Τύπος: Μόνο στην τεκμηρίωση

Η συνάρτηση `Buffer()` και ο constructor `new Buffer()` έχουν αποσυρθεί λόγω των θεμάτων χρηστικότητας που μπορούν να οδηγήσουν σε τυχαία θέματα ασφαλείας.

Ως εναλλακτική λύση, συνίσταται η χρήση των ακόλουθων μεθόδων δημιουργίας των αντικειμένων `Buffer`:

* [`Buffer.alloc(size[, fill[, encoding]])`](buffer.html#buffer_class_method_buffer_alloc_size_fill_encoding) - Δημιουργία `Buffer` με *αρχικοποίηση* μνήμης.
* [`Buffer.allocUnsafe(size)`](buffer.html#buffer_class_method_buffer_allocunsafe_size) - Create a `Buffer` with *uninitialized* memory.
* [`Buffer.allocUnsafeSlow(size)`][] - Δημιουργία `Buffer` *χωρίς αρχικοποίηση* μνήμης.
* [`Buffer.from(array)`][] - Δημιουργία `Buffer` με ένα αντίγραφο του `array`
* [`Buffer.from(arrayBuffer[, byteOffset[, length]])`](buffer.html#buffer_class_method_buffer_from_arraybuffer_byteoffset_length) - Create a `Buffer` that wraps the given `arrayBuffer`.
* [`Buffer.from(buffer)`][] - Δημιουργία `Buffer` που αντιγράφει το `buffer`.
* [`Buffer.from(string[, encoding])`](buffer.html#buffer_class_method_buffer_from_string_encoding) - Create a `Buffer` that copies `string`.

<a id="DEP0006"></a>

### DEP0006: child\_process options.customFds

Τύπος: Κατά την εκτέλεση

Εντός των μεθόδων `spawn()`, `fork()`, και `exec()` της ενότητας [`child_process`][], η επιλογή `options.customFds` αποσύρθηκε. Θα πρέπει να χρησιμοποιείται η επιλογή `options.stdio`.

<a id="DEP0007"></a>

### DEP0007: cluster worker.suicide

Τύπος: Κατά την εκτέλεση

Within the `cluster` module, the [`worker.suicide`][] property has been deprecated. Please use [`worker.exitedAfterDisconnect`][] instead.

<a id="DEP0008"></a>

### DEP0008: require('constants')

Τύπος: Μόνο στην τεκμηρίωση

Η ενότητα `constants` έχει αποσυρθεί. Όταν απαιτείται πρόσβαση στις σταθερές συγκεκριμένων ενοτήτων της Node.js, θα πρέπει να ανατρέχουν στην ιδιότητα `constants` που διαθέτει η κάθε ενότητα. Για παράδειγμα, `require('fs').constants` και `require('os').constants`.

<a id="DEP0009"></a>

### DEP0009: crypto.pbkdf2 χωρίς digest

Type: End-of-life

Η χρήση του [`crypto.pbkdf2()`][] API αποσύρθηκe στην έκδοση Node.js 6.0 επειδή η μέθοδος χρησιμοποιούσε εξ΄ορισμού το μη προτεινόμενο `'SHA1'` digest. Προηγουμένως, εμφανιζόταν ένα μήνυμα απόσυρσης. Starting in Node.js 8.0.0, calling `crypto.pbkdf2()` or `crypto.pbkdf2Sync()` with an undefined `digest` will throw a `TypeError`.

<a id="DEP0010"></a>

### DEP0010: crypto.createCredentials

Τύπος: Κατά την εκτέλεση

The [`crypto.createCredentials()`][] API is deprecated. Please use [`tls.createSecureContext()`][] instead.

<a id="DEP0011"></a>

### DEP0011: crypto.Credentials

Τύπος: Κατά την εκτέλεση

The `crypto.Credentials` class is deprecated. Please use [`tls.SecureContext`][] instead.

<a id="DEP0012"></a>

### DEP0012: Domain.dispose

Τύπος: Κατά την εκτέλεση

[`Domain.dispose()`][] is deprecated. Recover from failed I/O actions explicitly via error event handlers set on the domain instead.

<a id="DEP0013"></a>

### DEP0013: fs asynchronous function without callback

Τύπος: Κατά την εκτέλεση

Calling an asynchronous function without a callback is deprecated.

<a id="DEP0014"></a>

### DEP0014: fs.read legacy String interface

Τύπος: Τέλος κύκλου ζωής

The [`fs.read()`][] legacy String interface is deprecated. Use the Buffer API as mentioned in the documentation instead.

<a id="DEP0015"></a>

### DEP0015: fs.readSync legacy String interface

Τύπος: Τέλος κύκλου ζωής

The [`fs.readSync()`][] legacy String interface is deprecated. Use the Buffer API as mentioned in the documentation instead.

<a id="DEP0016"></a>

### DEP0016: GLOBAL/root

Τύπος: Κατά την εκτέλεση

The `GLOBAL` and `root` aliases for the `global` property have been deprecated and should no longer be used.

<a id="DEP0017"></a>

### DEP0017: Intl.v8BreakIterator

Τύπος: Κατά την εκτέλεση

The `Intl.v8BreakIterator` is deprecated and will be removed or replaced soon.

<a id="DEP0018"></a>

### DEP0018: Unhandled promise rejections

Τύπος: Κατά την εκτέλεση

Unhandled promise rejections are deprecated. In the future, promise rejections that are not handled will terminate the Node.js process with a non-zero exit code.

<a id="DEP0019"></a>

### DEP0019: require('.') resolved outside directory

Τύπος: Κατά την εκτέλεση

In certain cases, `require('.')` may resolve outside the package directory. This behavior is deprecated and will be removed in a future major Node.js release.

<a id="DEP0020"></a>

### DEP0020: Server.connections

Τύπος: Κατά την εκτέλεση

The [`Server.connections`][] property is deprecated. Please use the [`Server.getConnections()`][] method instead.

<a id="DEP0021"></a>

### DEP0021: Server.listenFD

Τύπος: Κατά την εκτέλεση

The `Server.listenFD()` method is deprecated. Please use [`Server.listen({fd: <number>})`][] instead.

<a id="DEP0022"></a>

### DEP0022: os.tmpDir()

Τύπος: Κατά την εκτέλεση

The `os.tmpDir()` API is deprecated. Please use [`os.tmpdir()`][] instead.

<a id="DEP0023"></a>

### DEP0023: os.getNetworkInterfaces()

Τύπος: Κατά την εκτέλεση

The `os.getNetworkInterfaces()` method is deprecated. Please use the [`os.networkInterfaces`][] property instead.

<a id="DEP0024"></a>

### DEP0024: REPLServer.prototype.convertToContext()

Τύπος: Κατά την εκτέλεση

The `REPLServer.prototype.convertToContext()` API is deprecated and should not be used.

<a id="DEP0025"></a>

### DEP0025: require('sys')

Τύπος: Κατά την εκτέλεση

The `sys` module is deprecated. Please use the [`util`][] module instead.

<a id="DEP0026"></a>

### DEP0026: util.print()

Τύπος: Κατά την εκτέλεση

The [`util.print()`][] API is deprecated. Please use [`console.log()`][] instead.

<a id="DEP0027"></a>

### DEP0027: util.puts()

Τύπος: Κατά την εκτέλεση

The [`util.puts()`][] API is deprecated. Please use [`console.log()`][] instead.

<a id="DEP0028"></a>

### DEP0028: util.debug()

Τύπος: Κατά την εκτέλεση

The [`util.debug()`][] API is deprecated. Please use [`console.error()`][] instead.

<a id="DEP0029"></a>

### DEP0029: util.error()

Τύπος: Κατά την εκτέλεση

The [`util.error()`][] API is deprecated. Please use [`console.error()`][] instead.

<a id="DEP0030"></a>

### DEP0030: SlowBuffer

Τύπος: Μόνο στην τεκμηρίωση

The [`SlowBuffer`][] class has been deprecated. Please use [`Buffer.allocUnsafeSlow(size)`][] instead.

<a id="DEP0031"></a>

### DEP0031: ecdh.setPublicKey()

Τύπος: Μόνο στην τεκμηρίωση

The [`ecdh.setPublicKey()`][] method is now deprecated as its inclusion in the API is not useful.

<a id="DEP0032"></a>

### DEP0032: domain module

Τύπος: Μόνο στην τεκμηρίωση

The [`domain`][] module is deprecated and should not be used.

<a id="DEP0033"></a>

### DEP0033: EventEmitter.listenerCount()

Τύπος: Μόνο στην τεκμηρίωση

The [`EventEmitter.listenerCount(emitter, eventName)`][] API has been deprecated. Please use [`emitter.listenerCount(eventName)`][] instead.

<a id="DEP0034"></a>

### DEP0034: fs.exists(path, callback)

Τύπος: Μόνο στην τεκμηρίωση

The [`fs.exists(path, callback)`][] API has been deprecated. Please use [`fs.stat()`][] or [`fs.access()`][] instead.

<a id="DEP0035"></a>

### DEP0035: fs.lchmod(path, mode, callback)

Τύπος: Μόνο στην τεκμηρίωση

The [`fs.lchmod(path, mode, callback)`][] API has been deprecated.

<a id="DEP0036"></a>

### DEP0036: fs.lchmodSync(path, mode)

Τύπος: Μόνο στην τεκμηρίωση

The [`fs.lchmodSync(path, mode)`][] API has been deprecated.

<a id="DEP0037"></a>

### DEP0037: fs.lchown(path, uid, gid, callback)

Τύπος: Μόνο στην τεκμηρίωση

The [`fs.lchown(path, uid, gid, callback)`][] API has been deprecated.

<a id="DEP0038"></a>

### DEP0038: fs.lchownSync(path, uid, gid)

Τύπος: Μόνο στην τεκμηρίωση

The [`fs.lchownSync(path, uid, gid)`][] API has been deprecated.

<a id="DEP0039"></a>

### DEP0039: require.extensions

Τύπος: Μόνο στην τεκμηρίωση

The [`require.extensions`][] property has been deprecated.

<a id="DEP0040"></a>

### DEP0040: punycode module

Τύπος: Μόνο στην τεκμηρίωση

The [`punycode`][] module has been deprecated. Please use a userland alternative instead.

<a id="DEP0041"></a>

### DEP0041: NODE\_REPL\_HISTORY\_FILE environment variable

Τύπος: Μόνο στην τεκμηρίωση

The `NODE_REPL_HISTORY_FILE` environment variable has been deprecated.

<a id="DEP0042"></a>

### DEP0042: tls.CryptoStream

Τύπος: Μόνο στην τεκμηρίωση

The [`tls.CryptoStream`][] class has been deprecated. Please use [`tls.TLSSocket`][] instead.

<a id="DEP0043"></a>

### DEP0043: tls.SecurePair

Τύπος: Μόνο στην τεκμηρίωση

The [`tls.SecurePair`][] class has been deprecated. Please use [`tls.TLSSocket`][] instead.

<a id="DEP0044"></a>

### DEP0044: util.isArray()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isArray()`][] API has been deprecated. Please use `Array.isArray()` instead.

<a id="DEP0045"></a>

### DEP0045: util.isBoolean()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isBoolean()`][] API has been deprecated.

<a id="DEP0046"></a>

### DEP0046: util.isBuffer()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isBuffer()`][] API has been deprecated. Please use [`Buffer.isBuffer()`][] instead.

<a id="DEP0047"></a>

### DEP0047: util.isDate()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isDate()`][] API has been deprecated.

<a id="DEP0048"></a>

### DEP0048: util.isError()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isError()`][] API has been deprecated.

<a id="DEP0049"></a>

### DEP0049: util.isFunction()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isFunction()`][] API has been deprecated.

<a id="DEP0050"></a>

### DEP0050: util.isNull()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isNull()`][] API has been deprecated.

<a id="DEP0051"></a>

### DEP0051: util.isNullOrUndefined()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isNullOrUndefined()`][] API has been deprecated.

<a id="DEP0052"></a>

### DEP0052: util.isNumber()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isNumber()`][] API has been deprecated.

<a id="DEP0053"></a>

### DEP0053 util.isObject()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isObject()`][] API has been deprecated.

<a id="DEP0054"></a>

### DEP0054: util.isPrimitive()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isPrimitive()`][] API has been deprecated.

<a id="DEP0055"></a>

### DEP0055: util.isRegExp()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isRegExp()`][] API has been deprecated.

<a id="DEP0056"></a>

### DEP0056: util.isString()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isString()`][] API has been deprecated.

<a id="DEP0057"></a>

### DEP0057: util.isSymbol()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isSymbol()`][] API has been deprecated.

<a id="DEP0058"></a>

### DEP0058: util.isUndefined()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.isUndefined()`][] API has been deprecated.

<a id="DEP0059"></a>

### DEP0059: util.log()

Τύπος: Μόνο στην τεκμηρίωση

The [`util.log()`][] API has been deprecated.

<a id="DEP0060"></a>

### DEP0060: util.\_extend()

Τύπος: Μόνο στην τεκμηρίωση

The [`util._extend()`][] API has been deprecated.

<a id="DEP0061"></a>

### DEP0061: fs.SyncWriteStream

Τύπος: Κατά την εκτέλεση

The `fs.SyncWriteStream` class was never intended to be a publicly accessible API. No alternative API is available. Χρησιμοποιήστε μια εναλλακτική ενότητα που τρέχει σε επίπεδο χρήστη.

<a id="DEP0062"></a>

### DEP0062: node --debug

Τύπος: Κατά την εκτέλεση

`--debug` activates the legacy V8 debugger interface, which has been removed as of V8 5.8. It is replaced by Inspector which is activated with `--inspect` instead.

<a id="DEP0063"></a>

### DEP0063: ServerResponse.prototype.writeHeader()

Τύπος: Μόνο στην τεκμηρίωση

The `http` module `ServerResponse.prototype.writeHeader()` API has been deprecated. Please use `ServerResponse.prototype.writeHead()` instead.

*Note*: The `ServerResponse.prototype.writeHeader()` method was never documented as an officially supported API.

<a id="DEP0064"></a>

### DEP0064: tls.createSecurePair()

Τύπος: Κατά την εκτέλεση

The `tls.createSecurePair()` API was deprecated in documentation in Node.js 0.11.3. Users should use `tls.Socket` instead.

<a id="DEP0065"></a>

### DEP0065: repl.REPL_MODE_MAGIC and NODE_REPL_MODE=magic

Τύπος: Μόνο στην τεκμηρίωση

The `repl` module's `REPL_MODE_MAGIC` constant, used for `replMode` option, has been deprecated. Its behavior has been functionally identical to that of `REPL_MODE_SLOPPY` since Node.js v6.0.0, when V8 5.0 was imported. Please use `REPL_MODE_SLOPPY` instead.

The `NODE_REPL_MODE` environment variable is used to set the underlying `replMode` of an interactive `node` session. Its default value, `magic`, is similarly deprecated in favor of `sloppy`.

<a id="DEP0066"></a>

### DEP0066: outgoingMessage.\_headers, outgoingMessage.\_headerNames

Τύπος: Μόνο στην τεκμηρίωση

The `http` module `outgoingMessage._headers` and `outgoingMessage._headerNames` properties have been deprecated. Please instead use one of the public methods (e.g. `outgoingMessage.getHeader()`, `outgoingMessage.getHeaders()`, `outgoingMessage.getHeaderNames()`, `outgoingMessage.hasHeader()`, `outgoingMessage.removeHeader()`, `outgoingMessage.setHeader()`) for working with outgoing headers.

*Note*: `outgoingMessage._headers` and `outgoingMessage._headerNames` were never documented as officially supported properties.

<a id="DEP0067"></a>

### DEP0067: OutgoingMessage.prototype.\_renderHeaders

Τύπος: Μόνο στην τεκμηρίωση

The `http` module `OutgoingMessage.prototype._renderHeaders()` API has been deprecated.

*Note*: `OutgoingMessage.prototype._renderHeaders` was never documented as an officially supported API.

<a id="DEP0068"></a>

### DEP0068: node debug

Τύπος: Κατά την εκτέλεση

`node debug` corresponds to the legacy CLI debugger which has been replaced with a V8-inspector based CLI debugger available through `node inspect`.

<a id="DEP0069"></a>

### DEP0069: vm.runInDebugContext(string)

Τύπος: Μόνο στην τεκμηρίωση

The DebugContext will be removed in V8 soon and will not be available in Node 10+.

*Note*: DebugContext was an experimental API.

<a id="DEP0070"></a>

### DEP0070: async_hooks.currentId()

Τύπος: Κατά την εκτέλεση

`async_hooks.currentId()` was renamed to `async_hooks.executionAsyncId()` for clarity.

*Note*: change was made while `async_hooks` was an experimental API.

<a id="DEP0071"></a>

### DEP0071: async_hooks.triggerId()

Τύπος: Κατά την εκτέλεση

`async_hooks.triggerId()` was renamed to `async_hooks.triggerAsyncId()` for clarity.

*Note*: change was made while `async_hooks` was an experimental API.

<a id="DEP0072"></a>

### DEP0072: async_hooks.AsyncResource.triggerId()

Τύπος: Κατά την εκτέλεση

`async_hooks.AsyncResource.triggerId()` was renamed to `async_hooks.AsyncResource.triggerAsyncId()` for clarity.

*Note*: change was made while `async_hooks` was an experimental API.

<a id="DEP0076"></a>

### DEP0076: tls.parseCertString()

Τύπος: Μόνο στην τεκμηρίωση

`tls.parseCertString()` is a trivial parsing helper that was made public by mistake. This function can usually be replaced with:

```js
const querystring = require('querystring');
querystring.parse(str, '\n', '=');
```

*Note*: This function is not completely equivalent to `querystring.parse()`. One difference is that `querystring.parse()` does url decoding:

```sh
> querystring.parse('%E5%A5%BD=1', '\n', '=');
{ '好': '1' }
> tls.parseCertString('%E5%A5%BD=1');
{ '%E5%A5%BD': '1' }
```

<a id="DEP0079"></a>

### DEP0079: Custom inspection function on Objects via .inspect()

Τύπος: Μόνο στην τεκμηρίωση

Using a property named `inspect` on an object to specify a custom inspection function for [`util.inspect()`][] is deprecated. Use [`util.inspect.custom`][] instead. For backwards compatibility with Node.js prior to version 6.4.0, both may be specified.

<a id="DEP0085"></a>

### DEP0085: AsyncHooks Sensitive API

Τύπος: Κατά την εκτέλεση

The AsyncHooks Sensitive API was never documented and had various of minor issues, see https://github.com/nodejs/node/issues/15572. Use the `AsyncResource` API instead.

<a id="DEP0086"></a>

### DEP0086: Remove runInAsyncIdScope

Τύπος: Κατά την εκτέλεση

`runInAsyncIdScope` doesn't emit the `before` or `after` event and can thus cause a lot of issues. See https://github.com/nodejs/node/issues/14328 for more details.

<a id="DEP0089"></a>

### DEP0089: require('assert')

Τύπος: Μόνο στην τεκμηρίωση

Importing assert directly is not recommended as the exposed functions will use loose equality checks. Use `require('assert').strict` instead. The API is the same as the legacy assert but it will always use strict equality checks.

<a id="DEP0098"></a>

### DEP0098: AsyncHooks Embedder AsyncResource.emit{Before,After} APIs

Τύπος: Κατά την εκτέλεση

The embedded API provided by AsyncHooks exposes emit{Before,After} methods which are very easy to use incorrectly which can lead to unrecoverable errors.

Use [`asyncResource.runInAsyncScope()`][] API instead which provides a much safer, and more convenient, alternative. See https://github.com/nodejs/node/pull/18513 for more details.